# Lyric_Analyzer

./: .gitignore  README.md  artists.py  config.py  data.json  example.txt  index.html  main.py  pyproject.toml  requirements.txt
