[tool.poetry]
name = "lyric_analyzer"
version = "0.1.0"
description = "Analyze song lyrics"
authors = ["Travis Recupero <31936622+travisrecupero@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.0"
lyricsgenius = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
